<resources>
    <string name="app_name">Maitre</string>
    <string name="url_api" translatable="false">http://44.213.7.88:8080/</string>

    <!--    Random -->
    <string name="txt_reservas">Booking</string>
    <string name="txt_cifroes" translatable="false">$$$</string>
    <string name="txt_nota_estabelecimento" translatable="false">5.0</string>
    <string name="txt_nome_estabelecimento">Establishment\'s name</string>
    <string name="txt_bem_vindo">Welcome</string>
    <string name="txt_pesquisar">Search</string>
    <string name="txt_estabelecimentos">Establishments</string>

    <!--    Menu footer-->
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_reservas">Bookings</string>
    <string name="menu_reservas_concluidas">Completed Bookings</string>
    <string name="menu_perfil">Profile</string>

    <!--    1. SplashScreen -->
    <string name="maitre" translatable="false">MAÎTRE</string>

    <!--    2. Home -->
    <string name="txt_home">Book your experience</string>

    <!--    Formulários-->
    <string name="formulario_txt_entrar">Login</string>
    <string name="formulario_txt_ver_concluidas">See your finished bookings</string>
    <string name="formulario_nome">Full name</string>
    <string name="formulario_hint_nome" translatable="false">Liz Smith</string>
    <string name="formulario_nascimento">Birth date</string>
    <string name="formulario_hint_nascimento">DD/MM/YYYY</string>
    <string name="formulario_rg" translatable="false">RG</string>
    <string name="formulario_hint_rg" translatable="false">XX.XXX.XXX-X</string>
    <string name="formulario_cpf" translatable="false">CPF</string>
    <string name="formulario_hint_cpf" translatable="false">XXX.XXX.XXX-XX</string>
    <string name="formulario_celular">Phone number</string>
    <string name="formulario_hint_celular" translatable="false">(XX) 9XXXX-XXXX</string>
    <string name="formulario_email" translatable="false">E-mail</string>
    <string name="formulario_hint_email" translatable="false">liz@gmail.com</string>
    <string name="formulario_senha">Password</string>
    <string name="formulario_hint_senha" translatable="false">*******</string>
    <string name="formulario_confirmar_senha">Confirm Password</string>

    <!--    3. Login-->
    <string name="login_txt_entrar">Don\'t have an account?</string>
    <string name="login_txt_cadastro">Sign Up</string>

    <!--    4. Criar conta-->
    <string name="cadastro_criar">Register</string>
    <string name="cadastro_txt_login">Already have an account?</string>
    <string name="cadastro_btn_criar">Create</string>

    <!--        5. LGPD-->
    <string name="txt_lgpd1">Privacy Policy</string>
    <string name="txt_lgpd2">Acceptance of this policy follows the rules of the LGPD law, and allows you to browse the platform. Learn more by clicking here</string>
    <string name="btt_sim">Yes</string>
    <string name="btt_nao">No</string>
    <string name="aceite_lgpd">Privacy Policy</string>
    <string name="txt_lgpd3">
    By using this application, you agree to the terms and conditions described below, regarding the collection, use and sharing of your personal data, as established by the General Data Protection Law (LGPD).

         1. Data Collected:
         The application will collect the following personal information: CPF, full name, date of birth, ID, cell phone number and email address.

         2. Purpose of Collection:
         This data will be used exclusively to make reservations at partner establishments. The application undertakes not to use this information for any other purpose that is not explicitly described in this document.

         3. Data Storage:
         The information collected will be stored securely on our servers for a period of 1 (one) year. After this period, the data will be automatically deleted.

         4. Data Sharing:
         The application will share your full name, date of birth and CPF with the establishments where you make reservations. This sharing is necessary to guarantee that the reservation will be made in your name.

         5. Data Security:
         We commit to taking the necessary measures to protect your data against unauthorized access, alteration, unauthorized disclosure or destruction.

         6. Consent:
         By clicking "YES", you are giving your consent to the collection, use and sharing of your information as described in this policy.

         7. Refusal of Consent:
         If you do not accept the terms of this policy, you will not be able to continue browsing and using the application.

         8. Rights of the Holder:
         You have the right to access, correct, delete or port your data. If you wish to exercise these rights or have any questions about the processing of your data, please contact us through the channels available in the application.

         9. Policy Changes:
         We reserve the right to make changes to this policy. If significant changes occur, we will notify users through the application or other appropriate means.

         By clicking "Yes", you expressly agree to the terms of this LGPD Policy.
    </string>

    <!--    ?.  Inicio-->
    <string name="txt_inicio1">Check out our most visited places</string>
    <string name="categoria">Categories</string>
    <string name="drinks" translatable="false">Drinks</string>
    <string name="petiscos">Snack</string>
    <string name="porcoes">Portions</string>
    <string name="sobremesa">Dessert</string>


    <!--    ?. Alterar Perfil-->
    <string name="alterar_antiga_senha">Old password</string>
    <string name="alterar_nova_senha">New password</string>
    <string name="alterar_txt_alterar">Change Profile</string>
    <string name="alterar_btn_atualizar">Update</string>

    <!--    ?. Visão estabelecimento-->
    <string name="ligar">Call</string>
    <string name="endereco">Address</string>
    <string name="entrar_fila">Get in line</string>
    <string name="reservar">Book</string>
    <string name="descricao_estabelecimento">Description</string>
    <string name="txt__estabelecimento" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tempus tellus lacus. Donec at iaculis est.</string>
    <string name="faixa_preco">Price range</string>
    <string name="tags" translatable="false">Tags</string>
    <string name="mapa">Map</string>


    <!--    ?. Reserva-->
    <string name="nome_bar1" translatable="false">Beerwings</string>
    <string name="nome_bar2" translatable="false">Madureira</string>
    <string name="dois_cifroes" translatable="false">$$</string>
    <string name="tres_cifroes" translatable="false">$$$</string>
    <string name="nota_bar1" translatable="false">4.8</string>
    <string name="nota_bar2" translatable="false">3.7</string>
    <string name="assentos">Seat(s) :</string>
    <string name="nrm_assento" translatable="false">1 &amp; 2 </string>
    <string name="nomes">Name (s) :</string>
    <string name="nome_reserva">Liz and Anna</string>
    <string name="dia">Day :</string>
    <string name="dia_reserva" translatable="false">23/11/2023</string>
    <string name="horario">Timetable :</string>
    <string name="horario_reserva1" translatable="false">11AM</string>
    <string name="horario_reserva2" translatable="false">22pm</string>

    <!--    ?. Telefone Estabelecimento-->
    <string name="telefone">Phone number</string>
    <string name="nrm_telefone" translatable="false">(11) 98765-4321</string>

    <!--    ?. Fila-->
    <string name="fila">Row</string>
    <string name="txt_fila">"You are at the position  "</string>
    <string name="txt_fila2">. Hold on.</string>

    <!--    ?. Confirmação Reserva-->
    <string name="txt_confirmacao1">Do you want to confirm?</string>
    <string name="txt_confirmacao2">After confirming your booking, it will appear in the “Bookings” tab</string>
    <string name="btt_cancelar">Cancel</string>
    <string name="btt_cancelar_reserva">Cancel booking</string>

    <!--    ?. Perfil-->
    <string name="perfil_user_name" translatable="false">Liz Smith</string>
    <string name="perfil_telefone" translatable="false">+1 – 4842989351</string>
    <string name="perfil_email" translatable="false">liz@gmail.com</string>
    <string name="perfil_txt_reserva">Check your upcoming bookings here</string>
    <string name="perfil_reservar">Book now</string>
    <string name="perfil_alterar">Change profile</string>
    <string name="perfil_chat" translatable="false">Chat</string>
    <string name="perfil_txt_chat">Chat, clear your doubts.</string>
    <string name="perfil_logout" translatable="false">Logout</string>

    <!--    ?. Criação reserva-->
    <string name="reservar_txt_instrucao">Select options for your booking</string>
    <string name="reservar_txt_dia">Day:</string>
    <string name="reservar_dia_seg">Mon</string>
    <string name="reservar_dia_ter">Tue</string>
    <string name="reservar_dia_qua">Wed</string>
    <string name="reservar_dia_qui">Thu</string>
    <string name="reservar_dia_sex">Fri</string>
    <string name="reservar_dia_sab">Sat</string>
    <string name="reservar_dia_dom">Sun</string>
    <string name="reservar_dia" translatable="false">10</string>
    <string name="reservar_txt_horario">Schedule:</string>
    <string name="reservar_horario" translatable="false">09:00 AM</string>
    <string name="reservar_txt_qtd">Number of reservations:</string>
    <string name="reservar_hint_qtd_reserva">E.G.: 2</string>
    <string name="reservar_txt_selecionar">Select places:</string>
    <string name="reservar_txt_num_assento">Enter seat numbers:</string>
    <string name="reservar_hint_qtd_assentos">E.G. : 12, 13</string>
    <string name="reservar_txt_pessoas">Registration of people:</string>
    <string name="reservar_hint_qtd_pessoas">E.G. : Ana, Paulo</string>
    <string name="reservar_btn_confirmar">Confirm reservation</string>
    <string name="reservar_estabelecimento">Name of establishment</string>
    =======
    <!--    ?. Cancelamento reserva-->
    <string name="txt_cancelamento">Select the desired option</string>
    <string name="btt_feedback" translatable="false">Feedback</string>

    <!--    ?.  Feedback-->

    <string name="txt_feedback">Tell us your experience about your reservation:</string>
    <string name="txt_feedback2">Write your experience here....</string>
    <string name="btt_reserva">Confirm reservation</string>
    <string name="bbt_enviar">Send comment</string>

    <!--    ?. Card feedback-->

    <string name="nome_usuario">Username</string>
    <string name="comentario">Feedback</string>

    <!--    ?. Card estabelecimento-->
    <string name="veja_mais">See more</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!-- Chatbot -->
    <string name="chat"> Maytê bot </string>
    <string name="online"> Online </string>
    <string name="digite">Write your message</string>
    <string name="selecione_assento">Select a seat</string>


</resources>