<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".layout.CriacaoReserva">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">

        <Button
            android:id="@+id/btn_reserva_nome"
            style="@style/button_superior_voltar"/>

        <TextView
            style="@style/tw_title_medium"
            android:text="@string/reservar_txt_instrucao"/>

        <TextView
            style="@style/txt_reservar"
            android:text="@string/reservar_txt_dia"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/container_reserva_dias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            style="@style/txt_reservar"
            android:text="@string/reservar_txt_horario"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/gl_horario_reserva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
<!--                Botoes horário reserva-->
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            style="@style/txt_reservar"
            android:text="@string/reservar_txt_qtd"/>

        <EditText
            style="@style/input_formulario"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/reservar_hint_qtd_reserva"
            android:inputType="number"
            android:id="@+id/qtd_reserva"/>

        <TextView
            style="@style/txt_reservar"
            android:text="@string/reservar_txt_selecionar"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/restaurante_top_down_foreground"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView
                style="@style/txt_reservar"
                android:layout_width="200dp"
                android:text="@string/reservar_txt_num_assento"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_sample"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/txt_reservar"
                android:layout_width="200dp"
                android:text="@string/reservar_txt_pessoas"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/input_formulario"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/reservar_hint_qtd_pessoas"
                android:inputType="text"
                android:id="@+id/pessoas_reserva"/>
        </LinearLayout>

        <Button
            android:id="@+id/bt_confirmar_reserva"
            style="@style/button_formulario"
            android:text="@string/reservar_btn_confirmar"
            android:backgroundTint="@color/verdeEscuro"/>
    </LinearLayout>
</ScrollView>