<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout.CardReservaFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:clickable="true"
                    android:contentDescription="Foto do bar"
                    android:focusable="true"
                    android:src="@mipmap/bar_um"
                    tools:ignore="HardcodedText"
                    android:scaleType="centerCrop"/>
                <TextView
                    style="@style/nome_estabelecimento"
                    android:text="@string/nome_bar1"
                    android:layout_gravity="center"
                    tools:ignore="RtlHardcoded"
                    android:id="@+id/reserva_nome_estabelecimento"
                    android:layout_marginVertical="7dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_light"
                    android:text="@string/dois_cifroes"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/assentos"
                    android:fontFamily="@font/quicksand_bold"
                    android:layout_marginVertical="2dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nrm_assento"
                    android:id="@+id/assento_reserva" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nomes"
                    android:fontFamily="@font/quicksand_bold"
                    android:layout_marginVertical="2dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nome_reserva"
                    android:id="@+id/nome_reserva"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dia"
                    android:fontFamily="@font/quicksand_bold"
                    android:layout_marginVertical="2dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dia_reserva"
                    android:id="@+id/dia_reserva"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/horario"
                    android:fontFamily="@font/quicksand_bold"
                    tools:ignore="TextSizeCheck"
                    android:layout_marginVertical="2dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/horario_reserva1"
                    android:id="@+id/horario_reserva"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>