<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout.Login"
    android:orientation="vertical">

    <!--    Cabeçalho-->
    <LinearLayout
        style="@style/action_bar"
        android:background="@color/begeClaro">
        <LinearLayout
            style="@style/action_bar_div">
            <TextView
                style="@style/action_bar_title"
                android:text="@string/formulario_txt_entrar"/>
            <ImageButton
                style="@style/action_bar_icon_arrow_left"
                android:id="@+id/tv_seta_home"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">
            <TextView
                style="@style/action_bar_subtitle_1"
                android:text="@string/login_txt_entrar"/>
            <TextView
                android:id="@+id/tv_ir_lgpd"
                style="@style/action_bar_subtitle_2"
                android:text="@string/login_txt_cadastro"
                android:textColor="@color/marrom"
                />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical">

            <TextView
                style="@style/titulo_input_formulario"
                android:text="@string/formulario_email"/>
            <EditText
                android:id="@+id/et_email"
                style="@style/input_formulario"
                android:hint="@string/formulario_hint_email"
                android:background="@drawable/rounded_edit_text"/>

            <TextView
                style="@style/titulo_input_formulario"
                android:text="@string/formulario_senha"/>
            <EditText
                android:id="@+id/et_senha"
                android:inputType="textPassword"
                style="@style/input_formulario"
                android:hint="@string/formulario_hint_senha"
                android:background="@drawable/rounded_edit_text"/>

            <Button
                android:id="@+id/bt_logar"
                style="@style/button_formulario"
                android:text="@string/formulario_txt_entrar"
                android:backgroundTint="@color/begeClaro"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>