<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout.Lgpd">

<!--   Principal-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

<!--   Card bottom -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/branco">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/old_standard_tt_regular"
                android:text="@string/txt_lgpd1"
                android:textColor="@color/preto"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/quicksand_semibold"
                android:padding="10dp"
                android:text="@string/txt_lgpd2"
                android:textAlignment="center"
                android:textColor="#8F90A6"
                android:textSize="13sp"
                tools:ignore="TextContrastCheck"
            />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
               android:gravity="center"
                android:layout_marginBottom="20dp"
                >
                <Button
                    style="@style/bttLgpdNao"
                    android:text="@string/btt_nao"/>

                <Button
                    style="@style/bttLgpdSim"
                    android:text="@string/btt_sim"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>