<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout.Perfil"
    android:orientation="vertical">

<!--        Cabeçalho-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingBottom="20dp"
            android:background="@drawable/border_bottom">
            <TextView
                style="@style/tw_user_name"
                android:text="@string/perfil_user_name"
                android:id="@+id/tv_perfil_user_name"/>

<!--            Informações usuário-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/tv_perfil_user_celular"
                    style="@style/tw_small"
                    android:text="@string/perfil_telefone"/>
                <ImageView
                    style="@style/perfil_circle_info_user"/>
                <TextView
                    android:id="@+id/tv_perfil_user_email"
                    style="@style/tw_small"
                    android:text="@string/perfil_email" />
            </LinearLayout>
        </LinearLayout>

<!--    Botões de navegação-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_perfil_reservas"
            android:text="@string/txt_reservas"
            android:drawableLeft="@drawable/ic_favorite"
            style="@style/perfil_button"/>
        <Button
            android:id="@+id/btn_perfil_reservar"
            android:text="Reserve agora"
            android:drawableLeft="@drawable/ic_calendar_check"
            style="@style/perfil_button"/>
        <Button
            android:id="@+id/btn_perfil_alterar"
            android:text="Alterar perfil"
            android:drawableLeft="@drawable/ic_pencil_edit"
            style="@style/perfil_button"/>
        <Button
            android:id="@+id/btn_perfil_chat"
            android:text="Chat"
            android:drawableLeft="@drawable/ic_info"
            style="@style/perfil_button"/>
        <Button
            android:id="@+id/btn_perfil_logout"
            android:text="Logout"
            android:drawableLeft="@drawable/ic_logout"
            android:textColor="@color/begeEscuro"
            style="@style/perfil_button"/>
    </LinearLayout>
</LinearLayout>